...
                            .clip(RoundedCornerShape(8.dp))
                            .background(AppTheme.colorScheme.backSecondary)
                            .border(
                                BorderStroke(1.dp, basicTextFieldBackgroundColor),
                                RoundedCornerShape(8.dp)
                            )
                            .testTag("taskDescriptionField"),
                        value = textFieldValue,
                        textStyle = AppTheme.typographyScheme.body
                            .copy(color = AppTheme.colorScheme.labelPrimary),
                        onValueChange = { textFieldValue = it },
                        decorationBox = { innerTextField ->
                            Row(
...
                    onSaveTask.invoke()
                    onClickEnabled = false
                }
                .semantics {
                    contentDescription = contentDesc
                }
                .testTag("saveButton"),
            text = stringResource(R.string.btn_save_title),
            color = AppTheme.colorScheme.colorBlue,
            style = AppTheme.typographyScheme.button
        )
    }
}
