...
    val uiState: StateFlow<HomeScreenState> get() = _uiState

    private val _showSnackBar = MutableStateFlow<SnackBarData?>(null)
    val showSnackBar: StateFlow<SnackBarData?> get() = _showSnackBar

    private val _taskList = MutableStateFlow<List<Task>>(emptyList())
    val taskList: StateFlow<List<Task>> get() = _taskList

    private val _countCompleted = MutableStateFlow(0)
    val countCompleted: StateFlow<Int> get() = _countCompleted

    private val _showCompletedTasks = MutableStateFlow(false)
    val showCompletedTasks: StateFlow<Boolean> get() = _showCompletedTasks
...
