<resources>
    <string name="app_name">ToDoAppCompose</string>

    <string name="my_tasks_title">Мои дела</string>
    <string name="completed_title">Выполнено —&#160;</string>
    <string name="new_title">Новое</string>
    <string name="no_category_title">Нет</string>
    <string name="low_category_title">Низкий</string>
    <string name="high_category_title">!! Высокий</string>
    <string name="delete_title">Удалить</string>
    <string name="btn_save_title">"СОХРАНИТЬ"</string>
    <string name="importance_title">"Важность"</string>
    <string name="deadline_title">"Сделать до"</string>
    <string name="done_txt">"ГОТОВО"</string>
    <string name="cancel_txt">"ОТМЕНА"</string>
    <string name="hint_text_your">"Ваш текст"</string>
    <string name="no_description">"Пустой черновик"</string>
    <string name="txt_offline">"offline"</string>
    <string name="txt_sync_needed">"Необходима\nсихронизация"</string>
    <string name="settings_title">"НАСТРОЙКИ"</string>
    <string name="app_theme_title">"Тема приложения:"</string>
    <string name="like_in_system">"Как в системе"</string>
    <string name="always_dark">"Всегда тёмная"</string>
    <string name="always_light">"Всегда светлая"</string>
    <string name="settings">"настройки"</string>
    <string name="close_completed_tasks">"скрыть выполненные задачи"</string>
    <string name="show_all_tasks">"показать все задачи"</string>
    <string name="add_new_task">"добавить новую задачу"</string>
    <string name="done">"выполнено"</string>
    <string name="not_done">"не выполнено"</string>
    <string name="todo_state_description">Состояние: %1$s. Важность: %2$s</string>
    <string name="todo_text_description">Текст задачи: %1$s</string>
    <string name="change_importance">Текст задачи: %1$s</string>
    <string name="delete_task_text">Удалить задачуу</string>
    <string name="close_screen">вернуться назад</string>
    <string name="save_task_text">сохранить задачу</string>
</resources>